# skill-diataxis

./: .gitignore  .stylelintrc.json  CLAUDE.md  README.md  main.py  pyproject.toml
diataxis-workspace/: eval_set.json  grade.py  trigger-eval.json  trigger-test.json
diataxis-workspace/iteration-1/: benchmark.json  benchmark.md  feedback.json
diataxis-workspace/iteration-2/: benchmark.json  feedback.json
evals/: evals.json
examples/self-docs/: Makefile  README.md  diataxis.toml  go.mod  hugo.toml  index.md
grill-me-sessions/: deterministic-review.grill.md
skill/: SKILL.md
skill/assets/: diataxis-schema.json  sites-index.html.j2  style.css  template.html
skill/checks/: _list_cell_names.py  _list_imports.py  _list_silent_cells.py  _list_value_miscompares.py  check-code-examples.nu  check-cross-links.nu  check-duplicate-weights.nu  check-exercise-content.nu  check-exercise-exists.nu  check-guidance-coherent.nu  check-howto-titles.nu  check-internal-links.nu  check-latex-math.nu  check-link-form.nu  check-marimo-ast.nu  check-marimo-cell-collisions.nu  check-marimo-cell-display.nu  check-marimo-format.nu  check-marimo-value-compare.nu  check-missing-static-assets.nu  check-orphan-exercises.nu  check-orphan-files.nu  check-purpose-field.nu  check-pyodide-imports.nu  check-quadrant-files.nu  check-quadrant-order.nu  check-schema.json  check-status-consistency.nu  check-step-by-step.nu  check-tables-in-reference.nu  check-todo-markers.nu  check-toml-structure.nu  check-toml-topics.nu  check-toml-valid.nu  check-weight-arithmetic.nu  mod.nu  run-checks.nu
skill/scripts/: build.py  (+1 more)
tests/: README.md  run-all.sh
(+265 files in other folders)
