[project]
name = "skill-diataxis"
version = "0.4.0"
description = "Diataxis documentation skill — create, revise, score, and publish structured documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2",
    "marimo",
    "uvicorn",
]

[project.scripts]
diataxis = "skill.scripts.build:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["skill*"]

[tool.setuptools.package-data]
skill = ["assets/*", "assets/*.j2", "references/*"]

[dependency-groups]
dev = [
    "check-jsonschema>=0.37.1",
]
