[project]
name = "skill-diataxis"
version = "0.6.0"
description = "Diataxis documentation skill — create, revise, score, and publish structured documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["skill*"]

[tool.setuptools.package-data]
skill = ["assets/*", "references/*", "templates/*"]

[dependency-groups]
dev = [
    "check-jsonschema>=0.37.1",
]
